further changes to p3 evidence

--- a/app/views/solicitor/application-task-list-with-means-merit.html
+++ b/app/views/solicitor/application-task-list-with-means-merit.html
@@ -451,7 +451,7 @@
         </h2>
 
         <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
-          <ul class="govuk-list govuk-list--bullet" style = "color: #b10e1e";>
+          <ul class="govuk-list govuk-list--bullet" style="color: #b10e1e" ;>
             <li>
               <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
             </li>
@@ -471,7 +471,7 @@
                         Background information
                 </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
