--- a/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
+++ b/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
@@ -439,7 +439,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="granted-access">Back</a>
+    <a class="govuk-c-back-link" href="bank-success">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -450,17 +450,10 @@
           Complete the following application sections
         </h2>
 
-        <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
-          <ul class="govuk-list govuk-list--bullet" style="color: #b10e1e" ;>
-            <li>
-              <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
-            </li>
-            <br>
-            <li>
-              <a><b>You can complete it in whichever order suits you</b></a>
-            </li>
-          </ul>
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
+          <p class="govuk-c-panel__body">This application is ready to submit</p>
         </div>
+
 
         <ol class="task-list">
           <li>
@@ -486,8 +479,8 @@
                 <a class="task-name" href="/solicitor/review-evidence">
                         Means assessment
                 </a>
-                <a class="govuk-link" href="/solicitor/review-evidence">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                <a class="govuk-link" href="">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
@@ -495,15 +488,15 @@
                         Merit assessment
                 </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="">
+                <a class="task-name" href="declared-evidence">
                         Evidence submission
                 </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
             </ul>
