--- a/app/views/solicitor/declared-evidence-with-stocks-property.html
+++ b/app/views/solicitor/declared-evidence-with-stocks-property.html
@@ -439,7 +439,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="granted-access">Back</a>
+    <a class="govuk-c-back-link" href="application-tasklist-with-means-merits-evidence">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -447,28 +447,15 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Complete the following application sections
+          The client has declared the following items that require further evidence
         </h2>
-
-        <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
-          <ul class="govuk-list govuk-list--bullet" style="color: #b10e1e" ;>
-            <li>
-              <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
-            </li>
-            <br>
-            <li>
-              <a><b>You can complete it in whichever order suits you</b></a>
-            </li>
-          </ul>
-        </div>
 
         <ol class="task-list">
           <li>
-            <h2 class="task-list-section">John Smith, JJ2319388</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Background information
+                        Banking information
                 </a>
                 <a class="govuk-link" href="">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
@@ -476,41 +463,33 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Basic details
+                        HMRC
                 </a>
                 <a class="govuk-link" href="">
                   <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="/solicitor/review-evidence">
-                        Means assessment
+                <a class="task-name" href="">
+                        Stocks and shares
                 </a>
-                <a class="govuk-link" href="/solicitor/review-evidence">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                <a class="govuk-link" href="">
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Merit assessment
+                        Property interest
                 </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
-                </a>
-              </li>
-              <li class="task-list-item">
-                <a class="task-name" href="">
-                        Evidence submission
-                </a>
-                <a class="govuk-link" href="">
-                  <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
             </ul>
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="application-tasklist-with-means-merits-evidence.html" role="button">Continue</a>
 
       </div>
 
