--- a/app/views/solicitor/declared-evidence-with-stocks.html
+++ b/app/views/solicitor/declared-evidence-with-stocks.html
@@ -470,15 +470,15 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="document-upload-type">
+                <a class="task-name" href="">
                         Stocks and shares
                 </a>
                 <a class="govuk-link" href="">
-                  <!-- <strong class="task-completed" id="other-1-completed">Completed</strong> -->
+                  <strong class="task-completed" id="other-1-completed">Completed</strong>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="document-upload-type">
+                <a class="task-name" href="document-upload-type-property">
                         Property interest
                 </a>
                 <a class="govuk-link" href="">
@@ -489,7 +489,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button"role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" role="button">Continue</a>
 
       </div>
 
