--- a/app/views/solicitor/online-banking.html
+++ b/app/views/solicitor/online-banking.html
@@ -26,34 +26,34 @@
 
           <p></p>
           <h2 class="govuk-heading-xl">
-            Does your client use online banking?
+            Does your client have online banking and wish to remotely complete the legal aid assessment?  
           </h2>
 
           <form class="form" action="contact-applicant" method="post">
 
 
-          <p class="govuk-body">We will ask for temporary 1 hour access to your client's bank accounts to check their financial details.</p>
+            <p class="govuk-body">We will ask for temporary 1 hour access to your client's bank accounts to check their financial details.</p>
 
 
             <div class="govuk-c-radios">
-            <fieldset class="govuk-c-fieldset">
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="benefits-in-kind-1" name="benefits-in-kind" type="radio" value="yes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-1">
                 Yes
               </label>
-              </div>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="benefits-in-kind-2" name="benefits-in-kind" type="radio" value="no">
+                  <label class="govuk-c-label govuk-c-radios__label" for="benefits-in-kind-2">
                 No
               </label>
-              </div>
-            </fieldset>
-          </div>
+                </div>
+              </fieldset>
+            </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
-        </form>
+            <input class="govuk-c-button" type="submit" value="Continue">
+          </form>
 
         </div>
       </div>
