--- a/app/views/solicitor/document-upload-property-review.html
+++ b/app/views/solicitor/document-upload-property-review.html
@@ -25,13 +25,14 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            Document upload for stocks and shares
+            Document upload for property
           </h2>
 
           </br>
           <h2 class="govuk-heading-m">
             Files uploaded
           </h2>
+
           <div>
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
               <thead class="govuk-c-table__head">
@@ -45,9 +46,9 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Stock-Certificate.pdf</td>
+                  <td class="govuk-c-table__cell">mortgage-statement-april-2018.pdf</td>
                   <td class="govuk-c-table__cell">pdf</td>
-                  <td class="govuk-c-table__cell govuk-c-table__header--numeric">Stock certificate</td>
+                  <td class="govuk-c-table__cell">Mortgage Statement</td>
                   <td class="govuk-c-table__cell">15/05/2018</td>
                   <td class="govuk-c-table__cell"><a href="">Remove</a></td>
                 </tr>
@@ -56,7 +57,7 @@
             <br>
             <br>
 
-            <a class="govuk-c-button govuk-c-button" href="other-evidence-stocks" role="button">Continue</a>
+            <a class="govuk-c-button govuk-c-button" href="other-evidence-property" role="button">Continue</a>
 
           </div>
 
