--- a/app/views/solicitor/other-evidence-stocks.html
+++ b/app/views/solicitor/other-evidence-stocks.html
@@ -19,7 +19,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="benefits-result">Back</a>
+      <a class="govuk-c-back-link" href="document-upload-stocks">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -29,28 +29,28 @@
             Does your client have other evidence to submit for stocks and shares?
           </h2>
 
-          <form class="form" action="contact-applicant" method="post">
+          <form class="form" action="declared-evidence-with-stocks" method="post">
 
 
             <div class="govuk-c-radios">
-            <fieldset class="govuk-c-fieldset">
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="other-stock-evidence-1" name="other-stock-evidence" type="radio" value="yes" required>
-                <label class="govuk-c-label govuk-c-radios__label" for="other-stock-evidence-1">
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="other-stock-evidence-1" name="other-stock-evidence" type="radio" value="yes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="other-stock-evidence-1">
                 Yes
               </label>
-              </div>
-              <div class="govuk-c-radios__item">
-                <input class="govuk-c-radios__input" id="other-stock-evidence-2" name="other-stock-evidence" type="radio" value="no">
-                <label class="govuk-c-label govuk-c-radios__label" for="other-stock-evidence-2">
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="other-stock-evidence-2" name="other-stock-evidence" type="radio" value="no">
+                  <label class="govuk-c-label govuk-c-radios__label" for="other-stock-evidence-2">
                 No
               </label>
-              </div>
-            </fieldset>
-          </div>
+                </div>
+              </fieldset>
+            </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">
-        </form>
+            <input class="govuk-c-button" type="submit" value="Continue">
+          </form>
 
         </div>
       </div>
