--- a/app/views/solicitor/select-address.html
+++ b/app/views/solicitor/select-address.html
@@ -25,7 +25,7 @@
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-            Select your client's home address
+            What is your client’s home address?
           </h2>
 
 
