more changes to evidence

--- a/app/views/solicitor/declared-evidence.html
+++ b/app/views/solicitor/declared-evidence.html
@@ -470,7 +470,7 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="document-upload-type">
+                <a class="task-name" href="evidence-submit-type">
                         Stocks and shares
                 </a>
                 <a class="govuk-link" href="">
@@ -478,7 +478,7 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="document-upload-type">
+                <a class="task-name" href="">
                         Property interest
                 </a>
                 <a class="govuk-link" href="">
@@ -489,7 +489,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button"role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" role="button">Continue</a>
 
       </div>
 
