--- a/app/views/solicitor/evidence-submit-type-property.html
+++ b/app/views/solicitor/evidence-submit-type-property.html
@@ -19,14 +19,14 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="declared-evidence">Back</a>
+      <a class="govuk-c-back-link" href="declared-evidence-with-stocks">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">Please choose how you wish to submit this evidence</h2>
 
-          <form action="document-upload-type" method="post">
+          <form action="document-upload-type-property" method="post">
 
             <div class="govuk-c-radios">
               </br>
