--- a/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
+++ b/app/views/solicitor/application-tasklist-with-means-merits-evidence.html
@@ -439,7 +439,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="bank-success">Back</a>
+    <a class="govuk-c-back-link" href="declared-evidence-with-stocks-property">Back</a>
 
     <p class="govuk-body"></p>
 
