--- a/app/views/solicitor/declared-evidence-with-stocks-property.html
+++ b/app/views/solicitor/declared-evidence-with-stocks-property.html
@@ -439,7 +439,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="application-tasklist-with-means-merits-evidence">Back</a>
+    <a class="govuk-c-back-link" href="other-evidence-property">Back</a>
 
     <p class="govuk-body"></p>
 
