--- a/app/views/solicitor/court-details.html
+++ b/app/views/solicitor/court-details.html
@@ -20,17 +20,17 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="previous-court-proceedings">Back</a>
+    <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Court Details</h2>
+          <h2 class="govuk-heading-xl">Is the funding for a case that has already gone to court?</h2>
 
           <form class="form" action="opponents-other-parties" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
-                <p class="govuk-body">Are the proceedings, for which funding is being sought, currently, before the court?</p>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="application-type-1" name="application-type" type="radio" value="Civil" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="application-type-1">
