--- a/app/views/solicitor/granted-access.html
+++ b/app/views/solicitor/granted-access.html
@@ -19,15 +19,15 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="case-dashboard">Back</a>
-
+  <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Based on what the applicant has told us so far they would be eligable for legal aid
+          Your client should be eligible for legal aid
         </h2>
 
-        <p class="govuk-body">We were granted access to:</p>
+        <p class="govuk-body">Your client gave us access to 3 months of transactions from:</p>
 
         <ul class="govuk-list govuk-list--bullet">
           <li><a href="#">3 bank accounts</a></li>
