--- a/app/views/solicitor/legal-help.html
+++ b/app/views/solicitor/legal-help.html
@@ -20,14 +20,17 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="urgent-application">Back</a>
+    <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Legal Help</h2>
+          <h2 class="govuk-heading-xl">              
+            Why is your client applying for legal representation?
+          </h2>
 
             <div class="govuk-o-form-group"><label class="govuk-c-label" for="more-detail">
-              Please state why your client is applying for legal representation at this stage
+              Enter reasons
             </label>
             <textarea id="more-detail" name="more-detail" rows="5" class="govuk-c-textarea"></textarea>
 
