--- a/app/views/solicitor/opponents-other-parties.html
+++ b/app/views/solicitor/opponents-other-parties.html
@@ -24,13 +24,12 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Opponents and other parties</h2>
+          <h2 class="govuk-heading-xl">Does your client need separate representation from other parties involved?</h2>
 
           <form class="form" action="about-case" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
-                <p class="govuk-body">Does your client require seperate representation from any other parties in the proceedings? </p>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="application-type-1" name="application-type" type="radio" value="Civil" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="application-type-1">
