--- a/app/views/solicitor/previous-court-proceedings.html
+++ b/app/views/solicitor/previous-court-proceedings.html
@@ -20,17 +20,16 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="exceptional-funding">Back</a>
-
+    <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Previous court proceedings</h2>
+          <h2 class="govuk-heading-xl">Has your client been to court on a family matter in the past 12 months?</h2>
 
           <form class="form" action="court-details" method="post">
 
             <div class="govuk-c-radios">
               <fieldset class="govuk-c-fieldset">
-                <p class="govuk-body">Has your client attended court on any family matter within the past 12 months?</p>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="application-type-1" name="application-type" type="radio" value="Civil" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="application-type-1">
