--- a/app/views/solicitor/property.html
+++ b/app/views/solicitor/property.html
@@ -22,8 +22,9 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you own your home, either outright or with a mortgage?
+          Your client said they do not own their home
         </h1>
+          <p class="govuk-body">Your client does not have a financial interest in a property.</p>
 
         <form class="form" action="declared-shares" method="post">
 
