--- a/app/views/solicitor/urgent-application.html
+++ b/app/views/solicitor/urgent-application.html
@@ -20,6 +20,7 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="merits-introduction">Back</a>
+    <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -48,7 +49,7 @@
             <details class="govuk-c-details">
               <summary class="govuk-c-details__summary">
                 <span class="govuk-c-details__summary-text">
-                  How might urgency arise?
+                  What is an 'urgent' application?
                 </span>
               </summary>
               <div class="govuk-c-details__text">
