--- a/app/views/solicitor/application-task-list.html
+++ b/app/views/solicitor/application-task-list.html
@@ -447,10 +447,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-          Complete the following application sections
+          Apply for legal aid
         </h2>
 
-        <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert">
+        <p class="govuk-body">
+          You must complete each section before you can submit the application.
+        </p>
+
+        <div class="govuk-c-error-summary" aria-labelledby="error-summary-title" role="alert" hidden="">
           <ul class="govuk-list govuk-list--bullet" style = "color: #b10e1e";>
             <li>
               <a><b>Until all the sections are complete, you will not be able to submit this application.</b></a>
@@ -464,7 +468,7 @@
 
         <ol class="task-list">
           <li>
-            <h2 class="task-list-section">John Smith, JJ2319388</h2>
+            <h2 class="task-list-section">John Doe, JJ2319388</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="">
@@ -500,7 +504,7 @@
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="">
-                        Evidence submission
+                        Submit evidence
                 </a>
                 <a class="govuk-link" href="">
                   <!-- <strong class="task-incomplete" id="other-1-completed">Start</strong> -->
@@ -510,7 +514,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="" role="button">Submit</a>
 
       </div>
 
