--- a/app/views/solicitor/benefits-kind.html
+++ b/app/views/solicitor/benefits-kind.html
@@ -20,12 +20,30 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="paid-cash">Back</a>
+      <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Benefits in Kind</h2>
+          <h2 class="govuk-heading-xl">Your client said they do not receive any benefits in kind</h2>
 
+          <p class="govuk-body">Your client does not get a company car, travel card or health insurance from their employer.</p>
+
+          <form action="/solicitor/benefits-kind" method="post">
+
+            <div class="govuk-c-radios">
+              </br>
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="cashYes" name="cashPay" type="radio" value="cashyes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="cashYes">Yes</label>
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="cashNo" name="cashPay" type="radio" value="cashno">
+                  <label class="govuk-c-label govuk-c-radios__label" for="cashNo">No</label>
+                </div>
+              </fieldset>
+            </div>
 
             <a class="govuk-c-button govuk-c-button" href="check-answers" role="button">Continue</a>
 
