--- a/app/views/solicitor/case-dashboard.html
+++ b/app/views/solicitor/case-dashboard.html
@@ -415,35 +415,35 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="start">Back</a>
-
+  <p class="govuk-body"></p>
       <div>
-
-        <h2 class="govuk-heading-xl">Resume an application</h2>
+ 
+        <h2 class="govuk-heading-xl">Continue an application</h2>
 
         <p class="govuk-body">
-          Choose an applicant for the following list of open applications. Once an applicant has completed their part of the assessment, this will appear as ready to progress.
+          When a client has completed the financial means assessment, the case will be marked as 'Ready to progress'.
         </p>
 
         </br>
         <h2 class="task-list-section">
-            <span class="task-list-section-number">Open applications</span>
+            <span class="task-list-section-number"></span>
         </h2>
         <table class="govuk-c-table--two-thirds" style="border-collapse: collapse;">
 
           <thead class="govuk-c-table__head">
             <tr class="govuk-c-table__row">
-              <th class="govuk-c-table__header" scope="col" style="border-width:thick">Applicant name</th>
-              <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Date of application</th>
-              <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Reference</th>
+              <th class="govuk-c-table__header" scope="col" style="border-width:thick">Client's name</th>
+              <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Date started</th>
+              <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Case reference</th>
               <th class="govuk-c-table__header" scope="col" style="border-width:thick;">&nbsp;</th>
             </tr>
           </thead>
           <tbody class="govuk-c-table__body">
             <tr class="task-list-item">
-              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">John Doe</a></td>
-              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">02/04/2018</a></td>
-              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">2018/LAA/4ewrqfdd</a></td>
-              <td class="govuk-c-table__cell"><a class="govuk-link"><strong class="task-completed" id="other-1-completed" style="background-color:#00823b">Ready to progress</strong></a></td>
+              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed" href="granted-access">John Doe</a></td>
+              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed" href="granted-access">02/04/2018</a></td>
+              <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed" href="granted-access">2018/LAA/4ewrqfdd</a></td>
+              <td class="govuk-c-table__cell"><a class="govuk-link" href="granted-access"><strong class="task-completed" id="other-1-completed" style="background-color:#00823b">Ready to progress</strong></a></td>
             </tr>
             <tr class="task-list-item">
               <td class="govuk-c-table__cell"><a class="task-name" aria-describedby="other-1-completed">Bob Dylan</a></td>
@@ -455,9 +455,7 @@
 
         </table>
       </div>
-      </br>
-      <a class="govuk-c-button govuk-c-button" href="granted-access" role="button">Continue</a>
-
+      <br>
     </main>
   </div>
 </body>
