--- a/app/views/solicitor/check-answers.html
+++ b/app/views/solicitor/check-answers.html
@@ -15,6 +15,7 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="benefits-kind">Back</a>
+    <p class="govuk-body"></p>
 
     <p class="govuk-body"></p>
 
@@ -22,14 +23,14 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Check your answers
+          Confirm your client's answers
         </h1>
 
         <form class="form" action="property" method="post">
 
           <div>
             <table class="govuk-c-table">
-              <caption class="govuk-c-table__caption">Your income</caption>
+              <caption class="govuk-c-table__caption">Income</caption>
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" width="500" style="border-width:thick;">Type</th>
@@ -47,10 +48,6 @@
                     <a style="color:red">
                       <href='#'><u>Remove</u></a>
                   </td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Benefits, rent and financial support</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="row">Benefits, rent and financial support</th>
