--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -17,17 +17,32 @@
   <main role="main" class="govuk-o-main-wrapper">
 
     <a class="govuk-c-back-link" href="declared-shares">Back</a>
-
+    <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffcc00">
+        <h1>Provisional result</h1>
+        <br>
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
+          <div class="govuk-c-panel__body">
+            You client will have to make a contribution of
+          </div>
+          <br>
           <h2 class="govuk-c-panel__title">
-            Means assessment result
-          </br>
-          Provisional: pass
+            £255.00 a month
+          </h2>
+          <div class="govuk-c-panel__body">
+            for 6 months, or a single payment of
+          </div>
+          <br>
+          <h2 class="govuk-c-panel__title">
+            £1275.00
           </h2>
         </div>
+
+        <p class="govuk-body">
+          The legal aid contributions are based on the following information.
+        </p>
 
         <h3 class="govuk-heading">
           Breakdown of provisional result
@@ -46,50 +61,20 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Main dwelling</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Additional property</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Land</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Timeshare</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
-                </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Third-party bank accounts</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Investments</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
-                  <td class="govuk-c-table__cell" style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell" style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Evidence needed</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
@@ -119,7 +104,7 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
   <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
@@ -129,22 +114,7 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Financial support</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Total other income</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
@@ -171,40 +141,15 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">PAYE + NI</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Employment expenses</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Child care</td>
+                  <td class="govuk-c-table__cell">Childcare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Dependants allowance</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Maintenance out</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"></td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell">Housing costs</td>
+                  <td class="govuk-c-table__cell">Rent</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
-                </tr>
-               <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" style="border-width:thick;">Criminal legal aid</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
