--- a/app/views/solicitor/paid-cash.html
+++ b/app/views/solicitor/paid-cash.html
@@ -20,11 +20,14 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="review-outgoings">Back</a>
+      <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">The citizen told us that they do not get paid in cash at all, is that right?</h2>
+          <h2 class="govuk-heading-xl">Your client said all income was paid into the bank</h2>
+          
+          <p class="govuk-body">Your client does not have any income paid in cash.</p>
 
           <form action="/solicitor/benefits-kind" method="post">
 
