--- a/app/views/solicitor/review-evidence.html
+++ b/app/views/solicitor/review-evidence.html
@@ -20,11 +20,11 @@
     <main role="main" class="govuk-o-main-wrapper">
 
       <a class="govuk-c-back-link" href="application-task-list">Back</a>
-
+  <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Choose how to review the bank statement evidence</h2>
+          <h2 class="govuk-heading-xl">How do you want to review the bank transactions?</h2>
 
           <form action="/solicitor/review-income" method="post">
 
@@ -33,11 +33,13 @@
               <fieldset class="govuk-c-fieldset">
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="new" name="newOrResume" type="radio" value="new" required>
-                  <label class="govuk-c-label govuk-c-radios__label" for="new">As a list of transactions</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="new"><strong>Full statement</strong><br>
+                  Fully itemised bank statements from the last 3 months</label>
                 </div>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="resume" name="newOrResume" type="radio" value="resume">
-                  <label class="govuk-c-label govuk-c-radios__label" for="resume">Summerised and by exception</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="resume"><strong>Summary view</strong><br>
+                  All client selections plus any high value transactions not selected</label>
                 </div>
               </fieldset>
             </div>
