--- a/app/views/solicitor/start.html
+++ b/app/views/solicitor/start.html
@@ -18,11 +18,10 @@
     </div>
 
     <main role="main" class="govuk-o-main-wrapper">
-
+  <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <p></p>
           <h2 class="govuk-heading-xl">What do you want to do?</h2>
 
           <form action="/solicitor/newOrResume" method="get">
@@ -36,7 +35,7 @@
                 </div>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="resume" name="newOrResume" type="radio" value="resume">
-                  <label class="govuk-c-label govuk-c-radios__label" for="resume">Continue an application</label>
+                  <label class="govuk-c-label govuk-c-radios__label" for="resume">Continue an existing application</label>
                 </div>
               </fieldset>
             </div>
