Added the final changes to the inital p3 flow

--- a/app/views/solicitor/declared-shares.html
+++ b/app/views/solicitor/declared-shares.html
@@ -24,7 +24,23 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">The client has declared stocks and shares worth £1000</h2>
+          <h2 class="govuk-heading-xl">The client has declared stocks and shares</h2>
+
+          <table class="govuk-c-table--two-thirds" style="border-spacing:0">
+            <thead class="govuk-c-table__head">
+              <tr class="govuk-c-table__row">
+                <th class="govuk-c-table__header" scope="col" style="border-width:thick; width:500px">Type</th>
+                <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick; width:500px">Amount</th>
+              </tr>
+            </thead>
+            <tbody class="govuk-c-table__body">
+              <tr class="govuk-c-table__row">
+                <td class="govuk-c-table__cell">Stocks</td>
+                <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1000</td>
+              </tr>
+            </tbody>
+          </table>
+          <br>
 
 
             <a class="govuk-c-button govuk-c-button" href="means-result" role="button">Continue</a>
