--- a/app/views/solicitor/means-result.html
+++ b/app/views/solicitor/means-result.html
@@ -49,22 +49,22 @@
                <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Main dwelling</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Additional property</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Land</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Timeshare</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
@@ -73,18 +73,18 @@
                 </tr>
                <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Third-party bank accounts</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Investments</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
-                  <td class="govuk-c-table__cell" style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
+                  <td class="govuk-c-table__cell" style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
@@ -93,7 +93,7 @@
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,870.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -119,7 +119,7 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
   <!--              <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total benefits</td>
@@ -139,12 +139,12 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total other income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£0.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" style="border-width:thick;">Redundancy income</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£0.00</td>
-                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell" style="border-width:thick;"><a href=""></a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
