--- a/app/views/solicitor/paid-cash.html
+++ b/app/views/solicitor/paid-cash.html
@@ -24,7 +24,7 @@
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">The citizen told us that they do not get paid in cash at all, is that right?</h2>
+          <h2 class="govuk-heading-xl">The client told us that they do not get paid in cash at all, is that right?</h2>
 
           <form action="/solicitor/benefits-kind" method="post">
 
