--- a/app/views/solicitor/benefits-kind.html
+++ b/app/views/solicitor/benefits-kind.html
@@ -19,15 +19,30 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link" href="paid-cash">Back</a>
+      <a class="govuk-c-back-link" href="review-outgoings">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h2 class="govuk-heading-xl">Benefits in Kind</h2>
+          <h2 class="govuk-heading-xl">The client has not declared any benefits in kind, is that right?</h2>
 
+          <form action="check-answers" method="post">
 
-            <a class="govuk-c-button govuk-c-button" href="check-answers" role="button">Continue</a>
+            <div class="govuk-c-radios">
+              </br>
+              <fieldset class="govuk-c-fieldset">
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="cashYes" name="cashPay" type="radio" value="cashyes" required>
+                  <label class="govuk-c-label govuk-c-radios__label" for="cashYes">Yes</label>
+                </div>
+                <div class="govuk-c-radios__item">
+                  <input class="govuk-c-radios__input" id="cashNo" name="cashPay" type="radio" value="cashno">
+                  <label class="govuk-c-label govuk-c-radios__label" for="cashNo">No</label>
+                </div>
+              </fieldset>
+            </div>
+
+            <input class="govuk-c-button" type="submit" value="Continue">
 
           </form>
 
