--- a/app/views/solicitor/property.html
+++ b/app/views/solicitor/property.html
@@ -22,7 +22,7 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you own your home, either outright or with a mortgage?
+          The client has not declared interest in a property, is that right?
         </h1>
 
         <form class="form" action="declared-shares" method="post">
