--- a/app/views/solicitor/review-outgoings.html
+++ b/app/views/solicitor/review-outgoings.html
@@ -51,6 +51,7 @@
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Date</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Description</th>
+                  <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Explaination</th>
                   <th class="govuk-c-table__header govuk-c-table__header--numeric" scope="col" style="border-width:thick;">Amount</th>
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;"></th>
                 </tr>
@@ -59,12 +60,14 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">06 Jan 18</td>
                   <td class="govuk-c-table__cell">Halifax Mortgage</td>
+                  <td class="govuk-c-table__cell">Mortgage payment</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">£1200.00</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
                 </tr>
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">18 Jan 18</td>
                   <td class="govuk-c-table__cell">Wiggly-tots Nursery</td>
+                  <td class="govuk-c-table__cell">Chilcare cost</td>
                   <td class="govuk-c-table__cell govuk-c-table__header--numeric">£600.00</td>
                   <td class="govuk-c-table__cell"><a href="">Change</a></td>
                 </tr>
